# dancetime

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  ballsaal.py  chris.py  dance4fun.py  dancetime.service  dancetime.timer  dimitarstefanin.py  dorner.py  event.py  holiday.py  holyday.csv  immervoll.py  kopetzky.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rueff.py  ruff.toml  schwebach.py  stanek.py  strobl.py  svabek.py  tailwind.config.js  template.css  template.html  timeutil.py  util.py
.github/workflows/: CI.yml
docker/: crontab  entrypoint.sh  nginx.conf  supervisord.conf
