[project]
name = "dancetime"
version = "0.1.0"
description = "A website to find dance events in Vienna."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "dateparser==1.2.0",
    "flake8==7.1.1",
    "icalendar==6.0.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "markupsafe==3.0.1",
    "mccabe==0.7.0",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "regex==2024.9.11",
    "requests==2.32.3",
    "ruff==0.7.0",
    "six==1.16.0",
    "soupsieve==2.6",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "urllib3==2.2.3",
]
