[project]
name = "dancetime"
version = "0.1.0"
description = "A website to find dance events in Vienna."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dateparser>=1.2.1",
    "icalendar>=6.1.1",
    "jinja2>=3.1.6",
    "regex>=2024.11.6",
    "requests>=2.32.3",
]
