[project]
name = "dancetime"
version = "0.1.0"
description = "A website to find dance events in Vienna."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.4.0",
    "icalendar>=7.1.2",
    "jinja2>=3.1.6",
    "regex>=2026.5.9",
    "requests>=2.34.2",
]

[dependency-groups]
dev = ["ruff>=0.11.2"]
